Устранение грубых блокировок: Удалены глобальные synchronized (lock), вместо них используются:
synchronized (arduinoLock) для операций с Arduino

ReentrantReadWriteLock для операций с ScreenReader

Новые потокобезопасные методы readHpLevel(), readMpLevel(), readMobHpLevel()

Улучшенная проверка активности окна: Метод isWindowActive() теперь проверяет не только видимость, но и активность окна на Windows.

Создан собственный класс исключения ScreenReadException

Улучшена обработка ошибок в основном цикле бота

Разделена обработка ошибок чтения экрана и общих ошибок

Улучшена производительность: Операции чтения экрана теперь не блокируют отправку команд на Arduino, и наоборот.